outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_01-06-18/evaluations/problem_eval1134973282678596298_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (0.3 and 0.1) with a steeper selection pressure curve (0.3 to 0.9) to balance exploration and exploitation more sharply.}
                                                                                                                                       ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (0.3 and 0.1) with a steeper selection pressure curve (0.3 to 0.9) to balance exploration and exploitation more sharply.}
                                                                                                                                       ^
SyntaxError: unmatched '}'
